--- a/traffic_inventory_system_backend/vercel.json
+++ b/traffic_inventory_system_backend/vercel.json
@@ -8,6 +8,10 @@
   ],
   "routes": [
     {
+      "src": "/socket.io/(.*)",
+      "dest": "dist/server.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "dist/server.js"
     }
