--- a/traffic_inventory_system_backend/.env.example
+++ b/traffic_inventory_system_backend/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV="development"
 PORT=5000
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/traffic_inventory_system"
+DATABASE_URL="postgresql://postgres:your_password_here@localhost:5432/traffic_inventory_system"
 BCRYPT_SALT_ROUNDS=10
 JWT_ACCESS_SECRET="your_jwt_access_secret_here"
 JWT_ACCESS_EXPIRES_IN=30d
