--- a/traffic_inventory_system_frontend/package.json
+++ b/traffic_inventory_system_frontend/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.2.1"
   },
