--- a/traffic_inventory_system_backend/.env.example
+++ b/traffic_inventory_system_backend/.env.example
@@ -5,3 +5,9 @@ BCRYPT_SALT_ROUNDS=10
 JWT_ACCESS_SECRET="your_jwt_access_secret_here"
 JWT_ACCESS_EXPIRES_IN=30d
 RESERVATION_TTL_SECONDS=60
+
+# Frontend URL (used for CORS)
+# Local development:
+FRONTEND_URL="http://localhost:5173"
+# Production (Vercel):
+# FRONTEND_URL="https://your-app.vercel.app"
